--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tony-graphics",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://stackhustla.github.io/tony-graphics/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -23,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
