--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tony-graphics",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://stackhustla.github.io/tony-graphics/",
+  "homepage": "https://createdbytonyt.com/",
   "type": "module",
   "scripts": {
     "dev": "vite",
